Added answers and codes to the questions

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,19 +7,56 @@ output:
 
 
 ## Loading and preprocessing the data
-
-
+```{r}
+if(!dir.exists("data")){dir.create("data")}
+setwd("./data")
+fileURL<-"https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+download.file(fileURL,destfile = "ActivityMonitoring.zip")
+unzip("ActivityMonitoring.zip")
+library(dplyr)
+library(ggplot2)
+activity<-read.csv("activity.csv")
+```
 
 ## What is mean total number of steps taken per day?
-
-
+```{r}
+total_steps_per_day<-with(activity,aggregate(steps,list(date),sum,na.rm=TRUE))
+mean_total_steps<-mean(total_steps_per_day$x)
+mean_total_steps
+```
 
 ## What is the average daily activity pattern?
-
-
+```{r}
+mean_steps_per_interval<-with(activity,aggregate(steps,list(interval),mean,na.rm=TRUE))
+with(mean_steps_per_interval,plot(Group.1,x,type = "l",xlab="Interval", ylab="Average Number of Steps"))
+```
 
 ## Imputing missing values
+The imputing strategy for missing values is to plug in the total mean steps per interval. The code for this is shown below
+```{r}
+new_activity_no_NA<- data.frame(activity)
+head(new_activity_no_NA) #Before imputing missing values
+na<-which(is.na(activity$steps))
+length<-length(na_count)
+na_value<-mean(mean_steps_per_interval$x,na.rm=TRUE)
+for(i in length){
+  new_activity_no_NA[na,1]<-na_value
+}
+head(new_activity_no_NA) #After imputing missing values
+```
 
-
+Median and mean have the same values as compared to the original scenario wherein they were at diferent values
+```{r}
+mean_total_steps<-mean(new_total_steps_per_day$x)
+mean_total_steps
+median_total_steps<-median(new_total_steps_per_day$x)
+median_total_steps
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?
+```{r}
+weekend<-c("Saturday","Sunday")
+activity$weekday<- factor(weekdays(as.Date(activity$date,format="%Y-%m-%d")) %in% weekend, levels=c(TRUE, FALSE), labels=c('Weekend', 'Weekday'))
+ggplot(data=activity,aes(x=interval,y=steps))+stat_summary(fun.y=mean,geom="line")+facet_grid(weekday~.)
+```
+There are consistently higher number of steps on average per interval during the weekends unlike during the weekdays wherein the number of steps taken peaks then drops. 
