--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -25,10 +25,22 @@ mean_total_steps<-mean(total_steps_per_day$x)
 mean_total_steps
 ```
 
+Histogram of total steps
+```{r}
+hist(total_steps_per_day$x,xlab="Total Steps per Day",main="Total Steps per Day")
+```
+
 ## What is the average daily activity pattern?
 ```{r}
 mean_steps_per_interval<-with(activity,aggregate(steps,list(interval),mean,na.rm=TRUE))
 with(mean_steps_per_interval,plot(Group.1,x,type = "l",xlab="Interval", ylab="Average Number of Steps"))
+```
+
+The interval with most number of total steps is
+```{r}
+max_index<-which.max(mean_steps_per_interval$x)
+max_interval<-mean_steps_per_interval[max_index,1]
+max_interval #Interval 835 has the most average number of steps accross all days
 ```
 
 ## Imputing missing values
@@ -37,7 +49,7 @@ The imputing strategy for missing values is to plug in the total mean steps per 
 new_activity_no_NA<- data.frame(activity)
 head(new_activity_no_NA) #Before imputing missing values
 na<-which(is.na(activity$steps))
-length<-length(na_count)
+length<-length(na)
 na_value<-mean(mean_steps_per_interval$x,na.rm=TRUE)
 for(i in length){
   new_activity_no_NA[na,1]<-na_value
@@ -45,8 +57,14 @@ for(i in length){
 head(new_activity_no_NA) #After imputing missing values
 ```
 
-Median and mean have the same values as compared to the original scenario wherein they were at diferent values
+Histogram of new data
 ```{r}
+hist(new_activity_no_NA$steps,xlab="Total Steps per Day",main="Histogram")
+```
+
+Median and mean have the same values as compared to the original scenario wherein they were at different values
+```{r}
+new_total_steps_per_day<-with(new_activity_no_NA,aggregate(steps,list(date),sum,na.rm=TRUE))
 mean_total_steps<-mean(new_total_steps_per_day$x)
 mean_total_steps
 median_total_steps<-median(new_total_steps_per_day$x)
@@ -59,4 +77,5 @@ weekend<-c("Saturday","Sunday")
 activity$weekday<- factor(weekdays(as.Date(activity$date,format="%Y-%m-%d")) %in% weekend, levels=c(TRUE, FALSE), labels=c('Weekend', 'Weekday'))
 ggplot(data=activity,aes(x=interval,y=steps))+stat_summary(fun.y=mean,geom="line")+facet_grid(weekday~.)
 ```
+
 There are consistently higher number of steps on average per interval during the weekends unlike during the weekdays wherein the number of steps taken peaks then drops. 
